Fix search query interpolation and CSS alignment
Corrected template string interpolation in getSearchResults API call. Updated SCSS alignment from 'end' to 'flex-end' in BottomSheet styles. Removed unused Loader import from page.tsx.

--- a/src/shared/ui/bottom-sheet/BottomSheet.module.scss
+++ b/src/shared/ui/bottom-sheet/BottomSheet.module.scss
@@ -4,7 +4,7 @@
   z-index: 1001;
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
 
   &__backdrop {
     position: absolute;
@@ -36,7 +36,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
     padding: var(--spacing-s) var(--spacing-s) var(--spacing-s) 0;
 
     cursor: grab;
